[package]
name = "wrk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.77"
tokio={version = "1.35.1",features = ["full"]}
mio = { version = "0.8.10",features = ["default"] }
log = "0.4.20"
tracing = { version = "0.1.40",features = ["log"] }
tracing-subscriber = "0.3"

