[package]
name = "wrk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.86"
tokio={version = "1.39.3",features = ["full"]}
log = "0.4.22"
tracing = { version = "0.1.40",features = ["log"] }
tracing-subscriber = "0.3"
futures = "0.3.30"
roaring = "0.10.6"
hyper = { version = "1.4.1",features = ["client","http1","server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.7.1"
rand="0.8.5"
num_cpus = "1.16.0"
trait-variant = "0.1.2"
futures-util = "0.3.30"
pin-project = "1.1.5"
